--- a/inst/rmd/P2.Rmd
+++ b/inst/rmd/P2.Rmd
@@ -2,6 +2,8 @@
 output:  
     word_document :
         reference_docx: QaTableStyle6.docx
+        toc: true
+        theme: united
 params: 
     DBServerName: 
         label: "Database Server Name:"
