Added code to create table of contents

--- a/inst/rmd/P1.Rmd
+++ b/inst/rmd/P1.Rmd
@@ -2,8 +2,7 @@
 output:  
     word_document :
         reference_docx: QaTableStyle6.docx
-        toc: true
-        theme: united
+        toc: yes
 params: 
     DBServerName: 
         label: "Database Server Name:"
